--- a/css/styles.css
+++ b/css/styles.css
@@ -3,5 +3,6 @@
 @import 'forms.css';
 @import 'nav.css';
 @import 'accordion.css';
+@import 'expando.css';
 @import 'search.css';
 @import 'results.css';
