--- a/css/forms.css
+++ b/css/forms.css
@@ -1,16 +1,17 @@
 input, select {
   background: transparent;
   border: none;
-  border-bottom: 1px solid #666666;
+  border-bottom: 2px solid var(--theme-color-1);
   outline-color: var(--theme-color-1);
   font-size: 1.25rem;
   height: 1.5em;
   border-radius: 0;
+  width: 100%;
 }
 
 input:focus, select:focus, input:hover, select:hover {
   outline: none;
-  border-bottom-color: var(--theme-color-1);
+  border-bottom-color: var(--highlight-color-1);
 }
 
 select {
@@ -30,6 +31,7 @@ label {
 
 fieldset {
   padding: 0 .5em;
+  border: none;
 }
 
 input[type="checkbox"] {
@@ -50,4 +52,8 @@ input[type="radio"]:checked + label {
 
 input[type="radio"] {
   display: none;
+}
+
+a {
+  cursor: pointer;
 }
