--- a/css/forms.css
+++ b/css/forms.css
@@ -7,6 +7,7 @@ input, select {
   height: 1.5em;
   border-radius: 0;
   width: 100%;
+  min-width: 1em;
 }
 
 input:focus, select:focus, input:hover, select:hover {
@@ -30,7 +31,7 @@ label {
 }
 
 fieldset {
-  padding: 0 .5em;
+  padding: 0;
   border: none;
 }
 
@@ -56,4 +57,13 @@ input[type="radio"] {
 
 a {
   cursor: pointer;
+}
+
+input[type='number'] {
+  -moz-appearance:textfield;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
 }
