--- a/css/reset.css
+++ b/css/reset.css
@@ -48,3 +48,13 @@ img {
 ::-webkit-scrollbar-thumb {
   background-color: #666;
 }
+
+.non-selectable {
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
+}
