--- a/css/forms.css
+++ b/css/forms.css
@@ -71,3 +71,11 @@ input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
 }
+/*
+@media screen and ( max-width: 480px ) {
+  button {
+    min-width: 2rem;
+    border-radius: 50%;
+    border: 1px solid var(--theme-color-1);
+  }
+} */
