--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@
 		"foot foot foot";
 	grid-template-rows: auto 1fr auto;
 	grid-template-columns: 300px auto auto;
+	/* height: 100vh; */
 }
 
 @media screen and (max-width: 480px) {
