--- a/css/card.css
+++ b/css/card.css
@@ -36,6 +36,7 @@
 	display: flex;
 	justify-content: flex-end;
 	font-size: 1.1em;
+	padding: .5em 0;
 }
 
 @media screen and ( max-width: 480px ) {
