--- a/css/reset.css
+++ b/css/reset.css
@@ -41,12 +41,21 @@ img {
 }
 
 ::-webkit-scrollbar-track {
-  background-color: #999;
+  background-color: #666;
   cursor: pointer;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #666;
+  background-color: #999;
+}
+
+.flex {
+  display: flex;
+}
+
+.flex--col {
+  display: flex;
+  flex-direction: column;
 }
 
 .non-selectable {
