--- a/css/results.css
+++ b/css/results.css
@@ -1,11 +1,22 @@
 .results {
 	grid-area: results;
 	display: none;
-	padding: 0 1em;
+	padding: 1em;
 }
+
 
 .results.show {
 	display: block;
+}
+
+#results {
+	grid-template-areas:
+		"header"
+		"options"
+		"list"
+		"footer";
+	grid-template-columns: auto;
+	grid-template-rows: auto auto 1fr auto;
 }
 
 .results__header {
@@ -14,6 +25,11 @@
 	grid-template-columns: 1fr 8em 1fr;
 	font-family: Cinzel;
 	align-items: center;
+	grid-area: header;
+}
+
+.results__options__container {
+	grid-area: options;
 }
 
 .results__header__count {
@@ -38,10 +54,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: flex-end;
-}
-
-.results__header .pagination__title--outer {
-	display: none;
+	grid-area: pagination;
 }
 
 .results__options .pagination__container {
@@ -54,9 +67,11 @@
 }
 
 .pagination__container {
-	display: flex;
 	align-items: center;
-	grid-area: pagination;
+	display: grid;
+	grid-template-areas:
+		"left3" "left" "center" "right" "right3";
+	grid-template-columns: 1fr 1fr auto 1fr 1fr;
 }
 
 .pagination__arrow {
@@ -66,7 +81,7 @@
 }
 .pagination__arrow:disabled {
 	cursor: not-allowed;
-	display: none;
+	visibility: hidden;
 }
 .pagination__arrow:hover {
 	color: var(--highlight-color-1);
@@ -119,6 +134,7 @@
 	max-height: 85vh;
 	justify-content: center;
 	margin: 0 -1rem;
+	grid-area: list;
 }
 
 .results__list-item {
@@ -134,6 +150,17 @@
   font-weight: bold;
   text-decoration: underline;
 }
+
+.results__footer {
+	grid-area: footer;
+	font-family: Cinzel;
+}
+
+.results__footer__pagination {
+	display: flex;
+	justify-content: center;
+}
+
 
 @media screen and ( max-width: 480px ) {
 	.results__header {
@@ -151,10 +178,6 @@
 
 	.results__header .pagination__container {
 		display: none;
-	}
-
-	.results__options .pagination__container {
-		display: block;
 	}
 
 	.pagination {
