--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@
 		"search results deck"
 		"foot foot foot";
 	grid-template-rows: auto 1fr auto;
-	grid-template-columns: 300px auto auto;
+	grid-template-columns: auto auto auto;
 	/* height: 100vh; */
 }
 
