--- a/css/deck.css
+++ b/css/deck.css
@@ -58,9 +58,24 @@
 	position: fixed;
 	top: 30%;
 	right: -100px;
+	padding: 1em 0;
 	transition: all .15s ease-in-out;
+	background: var(--theme-color-3);
+	z-index: 1;
+	border: 1px solid gray;
+	border-top-left-radius: 45%;
+	border-bottom-left-radius: 45%;
+	overflow: hidden;
+}
+
+.deck__peeker-item {
+	padding: 1em;
 }
 
 .dragging .deck__peeker {
 	right: 0;
+}
+
+.deck__list--main, .deck__list--side {
+	padding-bottom: 1em;
 }
