--- a/css/main.css
+++ b/css/main.css
@@ -5,8 +5,8 @@
 		"head head head"
 		"search results deck"
 		"foot foot foot";
-	grid-template-rows: auto 1fr auto;
-	grid-template-columns: auto auto auto;
+	grid-template-rows: auto;
+	grid-template-columns: auto 1fr auto;
 	/* height: 100vh; */
 }
 
