--- a/css/deck.css
+++ b/css/deck.css
@@ -4,8 +4,8 @@
 	padding: 1em;
 	width: 0;
 	flex-direction: column;
-	overflow-x: scroll;
 	position: relative;
+	max-height: 100%;
 }
 
 .deck.show {
@@ -34,6 +34,8 @@
 
 .deck__list {
 	min-height: 500px;
+	margin-right: -1em;
+	padding-right: 1em;
 }
 
 .deck__list__category {
@@ -55,12 +57,13 @@
 }
 
 .card__count {
-	width: 2em;
+	width: 1.5em;
 	display: flex;
 	justify-content: center;
 	flex-shrink: 0;
 	padding: .5em;
 	font-size: 1.1rem;
+	padding-left: 0;
 }
 
 .card__wrapper {
@@ -70,23 +73,35 @@
 .deck__peeker {
 	position: fixed;
 	top: 30%;
-	right: -100px;
 	padding: 1em 0;
 	transition: all .15s ease-in-out;
 	background: var(--theme-color-3);
-	z-index: 1;
+	z-index: 2;
 	border: 1px solid gray;
+	overflow: hidden;
+}
+
+.deck__peeker--right {
+	right: -100px;
 	border-top-left-radius: 45%;
 	border-bottom-left-radius: 45%;
-	overflow: hidden;
+}
+
+.deck__peeker--left {
+	left: -100px;
+	border-top-right-radius: 45%;
+	border-bottom-right-radius: 45%;
 }
 
 .deck__peeker-item {
 	padding: 1em;
 }
 
-.dragging .deck__peeker {
+.dragging .deck__peeker--right {
 	right: 0;
+}
+.dragging .deck__peeker--left {
+	left: 0;
 }
 
 .deck__list--main, .deck__list--side {
@@ -99,5 +114,12 @@
 }
 
 .deck__import__li:hover {
-	text-decoration: underline;
+	color: var(--highlight-color-1);
+}
+
+@media screen and (max-width: 480px) {
+	.deck.show {
+		width: 100%;
+		height: 100vh;
+	}
 }
