--- a/css/main.css
+++ b/css/main.css
@@ -5,9 +5,9 @@
 		"head head head"
 		"search results deck"
 		"foot foot foot";
-	grid-template-rows: auto;
+	grid-template-rows: auto 1fr auto;
 	grid-template-columns: auto 1fr auto;
-	/* height: 100vh; */
+	height: 100vh;
 }
 
 @media screen and (max-width: 480px) {
@@ -20,8 +20,12 @@
 			"results results results"
 			"deck deck deck"
 			"foot foot foot";
-		grid-template-rows: auto;
+		grid-template-rows: auto 1fr auto;
 		grid-template-columns: 1fr 1fr 1fr;
 	}
+}
+
+.scrollable {
+	overflow-y: scroll;
 }
 
