--- a/css/results.css
+++ b/css/results.css
@@ -4,7 +4,6 @@
 	padding: 1em;
 }
 
-
 .results.show {
 	display: block;
 }
@@ -17,6 +16,7 @@
 		"footer";
 	grid-template-columns: auto;
 	grid-template-rows: auto auto 1fr auto;
+	max-height: 100%;
 }
 
 .results__header {
@@ -130,7 +130,6 @@
 .results__list {
 	display: flex;
 	flex-wrap: wrap;
-	overflow-y: scroll;
 	max-height: 85vh;
 	justify-content: center;
 	margin: 0 -1rem;
