--- a/css/modal.css
+++ b/css/modal.css
@@ -1,125 +1,47 @@
-.modal-container {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translateX(-50%) translateY(-50%);
-  background: var(--theme-color-3);
-  padding: 1em;
-  max-width: 90vw;
-  min-width: 300px;
-  min-height: 400px;
-  max-height: 80vh;
-  z-index: 2;
-  height: 100%;
-}
-
-.modal-hider {
-  position: fixed;
-  background: rgba(0, 0, 0, 0.25);
-  z-index: 1;
-  height: 100%;
-  width: 100%;
-  top: 0;
-  left: 0;
-}
-
-.modal-wrapper--show {
-  display: block;
-}
-.modal-wrapper--hide {
-  display: none;
-}
-
-.modal__header {
-  display: flex;
-  justify-content: space-between;
-  padding: .5em;
-}
-
-.modal__close {
-  cursor: pointer;
-  font-size: 1.5rem;
-  line-height: 1rem;
-}
-
-.modal__close:hover {
-  color: var(--highlight-color-1);
-}
-
-
 .modal {
-  position: fixed;
-  height: 100vh;
-  width: 100vw;
-  top: 0;
-  left: 0;
-  display: grid;
-  grid-template-areas:
-    "nw n ne"
-    "w modal e"
-    "sw s se";
-  grid-template-columns: 15% 1fr 15%;
-  grid-template-rows: 15% 1fr 15%;
-  z-index: -1;
-  background-color: rgba(0, 0, 0, 0.25);
-}
-
-.modal.show {
-  z-index: 1;
-}
-
-.modal__content__wrapper {
-  height: calc(100vh - 30% - 2.5em);
-}
-
-.modal__content {
-  height: 100%;
-}
-
-.modal-content {
-  grid-area: modal;
-  border: 1px solid var(--theme-color-2);
-  background-color: var(--theme-color-3);
-}
-
-.dialog {
   position: fixed;
   height: 70%;
   width: 70%;
-  top: 0;
-  left: 0;
+  min-width: 375px;
+  min-height: 375px;
+  top: 50%;
+  left: 50%;
   display: block;
   z-index: 11;
-  margin: 15%;
+  transform: translateX(-50%) translateY(-50%);
   display: block;
   background-color: var(--theme-color-3);
+  border: 2px solid var(--theme-color-2);
+  box-shadow: 0vh 0vh 100vh 20px black;
+  overflow: visible;
 }
 
-.dialog > * {
+.modal > * {
   height: 100%;
 }
 
-.dialog:after {
+.modal:after {
   content: "×";
-  top: 0;
+  top: -3rem;
   right: 0;
-  margin: .5em;
+  margin: .5rem;
   position: fixed;
   cursor: pointer;
-  font-size: 1.5rem;
+  font-size: 2.5rem;
   line-height: 1rem;
 }
-.dialog:after:hover {
-  color: white;
+
+.modal:after:hover {
+  color: var(--highlight-color-1);
 }
 
-.dialog:before {
+/* .modal:before {
   content: '';
-  background-color: rgba(0, 0, 0, 0.25);
+  background-color: rgba(0, 0, 0, 0.75);
   position: fixed;
   height: 100vh;
   width: 100vw;
   top: 0;
   left: 0;
   z-index: -1;
-}
+} */
